Bug 101921 - Broken tab navigation of styles & formatting sidebar controls
Summary: Broken tab navigation of styles & formatting sidebar controls
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
5.2.0.4 release
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.3.0 target:5.2.3
Keywords: accessibility, bibisected, regression
: 100785 (view as bug list)
Depends on:
Blocks: Sidebar-Styles Sidebar-Accessibility
  Show dependency treegraph
 
Reported: 2016-09-06 04:29 UTC by Yousuf Philips (jay) (retired)
Modified: 2022-06-30 12:11 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Yousuf Philips (jay) (retired) 2016-09-06 04:29:43 UTC
Steps:
1) Open writer
2) On the styles & formatting deck of the sidebar
3) Click the drop down list at the bottom to give it focus
4) Press tab doesnt switch to a different control

Regression as this works in 5.1.

Version: 5.3.0.0.alpha0+
Build ID: f7513f0f53f2d074c08610a68fb787bb379c31d4
CPU Threads: 2; OS Version: Linux 3.19; UI Render: default; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2016-09-02_23:58:05
Locale: en-US (en_US.UTF-8); Calc: group
Comment 1 Yousuf Philips (jay) (retired) 2016-09-07 20:36:39 UTC
anyone who can bibisect this?
Comment 2 Xisco Faulí 2016-09-08 08:04:18 UTC
Issue introduced in range 81e59f3b5012fe8db00adf0dbe6245090590d348..85ac3cd63f6720ff2d3c4b7491f4ad296219fa53
Comment 3 Xisco Faulí 2016-09-08 08:48:45 UTC Comment hidden (obsolete)
Comment 4 Xisco Faulí 2016-09-08 08:57:05 UTC
Hi Caolan,
I see in the commit 0b14725c7b188b78eddafae7ea6761865dfc81ab that you did some changes to styles & formatting. Could you please take a look whenever you have some time?
Thanks
Comment 5 Commit Notification 2016-09-09 10:20:19 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3d7d318914bd69262da647e0db23ec47d6550afe

Resolves: tdf#101921 no tab navigation in style&formatting sidebar

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2016-09-09 10:22:15 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6744039f1becbc182445685a5cba3ed8a0be2705

Related: tdf#101921 get taborder to match visual order

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Yousuf Philips (jay) (retired) 2016-09-09 13:54:31 UTC
Thanks for the fix Caolan. Please backport to 5.2 and 5.1.
Comment 8 Commit Notification 2016-09-12 08:49:42 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c0d5a89b081b81261b7f4b306e64cfb6ce6e950a&h=libreoffice-5-2

Resolves: tdf#101921 no tab navigation in style&formatting sidebar

It will be available in 5.2.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Buovjaga 2016-09-13 15:35:28 UTC
*** Bug 100785 has been marked as a duplicate of this bug. ***