Resolves: tdf#101921 no tab navigation in style&formatting sidebar

Change-Id: I737ed446d0ead9d748873fec90b62dcced35e328